--- a/src/musicregister/Window.form
+++ b/src/musicregister/Window.form
@@ -3,6 +3,9 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+      <Color id="Standardmark&#xf6;r"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -99,14 +102,6 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JButton" name="buttonSearchKeyN">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Sortera efter nyckelnummer"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonSearchKeyNActionPerformed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JTextField" name="fieldKeyNumber">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="fieldKeyNumberActionPerformed"/>
@@ -136,6 +131,14 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="&#xc4;gare:"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="buttonSearchKeyN">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Sortera efter nyckelnummer"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonSearchKeyNActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="buttonAdd">
       <Properties>
